--- a/css/style.css
+++ b/css/style.css
@@ -46,7 +46,6 @@
 
 /** corpo do site e seu fundo **/
 body {
-<<<<<<< HEAD
   background-color: #000;
   background-image: url(../images/fundoo.png);
   background-repeat: no-repeat;
@@ -55,15 +54,6 @@ body {
   overflow-x: hidden;
   background-repeat: no-repeat;
   margin-left: 0;
-=======
-    background-color: #000;
-    background-image: url(../images/fundo4.png);
-    background-repeat: no-repeat;
-    background-attachment: scroll;
-    background-size: cover;
-    overflow-x: hidden;
-    margin-left: 0;
->>>>>>> 8a18e778804c7a579e2ca56e077bfc0461f0ddc2
 }
 
 /** container principal central com efeito vidro **/
@@ -93,7 +83,6 @@ body {
 
 /** menu acima **/
 .header {
-<<<<<<< HEAD
   backdrop-filter: blur(9px) saturate(0%);
   -webkit-backdrop-filter: blur(9px) saturate(0%);
   background-color: rgba(0, 0, 0, 0.367);
@@ -106,36 +95,6 @@ body {
   box-shadow: 0px 0px 6px 0px rgba(71, 71, 71, 0.353);
   text-align: right;
   display: block;
-=======
-   backdrop-filter: blur(9px) saturate(0%);
-   -webkit-backdrop-filter: blur(9px) saturate(0%);
-   background-color: rgba(0, 0, 0, 0.367);
-   position: fixed;
-   top: 0;
-   width: 100%;
-   height: 8%;
-   z-index: 1;
-   box-shadow: 0px 0px 6px 0px rgba(71, 71, 71, 0.353);
-   display: flex;
-   align-items: center;
-}
-
-/** posicionamento e tamanho do logo do gambito em cima **/
-.box_logo {
-  height: 100%;
-  display: flex;
-  align-items: center;
-}
-
-.box_logo img {
-  height: 80%;
-  margin: 0 30px;
-}
-
-.menu {
-  position: absolute;
-  right: 0;
->>>>>>> 8a18e778804c7a579e2ca56e077bfc0461f0ddc2
 }
 
 .menu ul li {
@@ -232,7 +191,6 @@ h3 {
   margin-bottom: -20vh;
 }
 
-<<<<<<< HEAD
 /** posicionamento e tamanho do logo do gambito em cima **/
 .box_logo {
   display: flex;
@@ -243,13 +201,11 @@ h3 {
   z-index: 999;
 }
 
-=======
->>>>>>> 8a18e778804c7a579e2ca56e077bfc0461f0ddc2
 /** configurações das imagens dos pontos turísticos **/
 .images {
   display: inline-block;
   opacity: 0.8;
-  margin-top: 5vh;
+  margin-top: 500px;
   margin-left: 40px;
 }
 
