--- a/css/style.css
+++ b/css/style.css
@@ -88,28 +88,33 @@ body {
   background-color: rgba(0, 0, 0, 0.367);
   position: fixed;
   top: 0;
-  left: 0;
   width: 100%;
-  height: 10%;
+  height: 10vh;
   z-index: 999;
   box-shadow: 0px 0px 6px 0px rgba(71, 71, 71, 0.353);
-  text-align: right;
-  display: block;
+  display: flex;
+  align-items: center;
 }
 
-.menu ul li {
-  display: inline-block;
-  flex-wrap: wrap;
+.menu {
+  position: absolute;
+  right: 0;
+}
+
+.menu li {
   list-style-type: none;
   margin-right: 20px;
-  margin-top: 10px;
+}
+
+.menu ul {
+  display: flex;
+  flex-direction: row;
 }
 
 .menu ul li a {
   font-family: 'Quicksand', sans-serif;
   letter-spacing: 3px;
-  font-size: 16px;
-  display: block;
+  font-size: 1.125rem;
   color: #cacaca;
   padding: 0px 20px 0px 10px;
   text-decoration: none;
@@ -120,7 +125,7 @@ body {
   text-decoration: none;
   font-weight: 700;
   border-bottom: 2px solid #c11919c1;
-  padding-bottom: 8px;
+  padding-bottom: .5rem;
   line-height: 1;
 }
 
@@ -195,9 +200,8 @@ h3 {
 .box_logo {
   display: flex;
   position: fixed;
-  width: 60%;
-  height: 60%;
-  margin: 10px 120px;
+  height: 4rem;
+  margin: auto 5rem;
   z-index: 999;
 }
 
@@ -205,7 +209,7 @@ h3 {
 .images {
   display: inline-block;
   opacity: 0.8;
-  margin-top: 500px;
+  margin-top: 9vh;
   margin-left: 40px;
 }
 
