--- a/css/style.css
+++ b/css/style.css
@@ -143,6 +143,7 @@ body {
 .menu ul {
   display: flex;
   flex-direction: row;
+  margin: 0;
 }
 
 .menu ul li a {
@@ -169,10 +170,10 @@ body {
 
 /** título principal **/
 h1 {
-  margin: 10rem 0 1rem 0;
+  margin: 10rem 0 1rem 0 !important;
   font-family: 'League Spartan', sans-serif;
-  font-size: 7rem;
-  font-weight: 900;
+  font-size: 7rem !important;
+  font-weight: 900 !important;
   color: #fff;
 }
 
@@ -236,8 +237,15 @@ h3 {
   }
 } 
 
+@media screen and (max-width: 1300px) {
+  h1 {
+    font-size: calc(1.375rem + 1.5vw) !important;
+  }
+} 
+
 @media screen and (max-width: 1000px) {
   h1 {
+    font-size: calc(1.375rem + 1.5vw);
     margin: 0 0 1rem 0;
   }
   .presentation {
