--- a/css/style.css
+++ b/css/style.css
@@ -85,6 +85,12 @@ body {
   padding: 5vh;
 }
 
+.img-carousel {
+  filter: opacity(25%);
+  height: 40rem;
+  width: auto;
+}
+
 /** menu acima **/
 .header {
   backdrop-filter: blur(9px) saturate(0%);
@@ -204,6 +210,16 @@ h3 {
   display: block;
 }
 
+.box_about {
+  width: 60%;
+}
+
+@media screen and (max-width: 1000px) {
+  .box_about {
+    width: 100%;
+  }
+}
+
 .presentation {
   margin-top: 12rem;
   display: flex;
@@ -298,7 +314,7 @@ img {
 }
 
 /** fonte e posicionamento dos títulos dentro das fotos **/
-p {
+.img-paragraph {
   font-family: 'Quicksand', sans-serif;
   letter-spacing: 2;
   position: absolute;
