--- a/css/style.css
+++ b/css/style.css
@@ -287,7 +287,7 @@ h3 {
 .box_logo {
   display: flex;
   position: fixed;
-  height: 4rem;
+  height: 8vh;
   margin: auto 2rem;
   z-index: 999;
 }
