--- a/css/tourist_spot.css
+++ b/css/tourist_spot.css
@@ -221,10 +221,8 @@ h3 {
 }
 
 .avaliation {
-    background-color: #820a0b;
     display: flex;
     flex-direction: row;
-    padding: 10px 0;
     margin-top: 20px;
 }
 
@@ -232,21 +230,32 @@ h3 {
     color: #f5b064;
     font-weight: 500;
     font-size: 1.2rem;
+    margin-bottom: .2rem;
+}
+
+.avaliation_content {
+    position: absolute;
+    align-self: center;
+    margin: 0 10.5vmin;
+    font-weight: 300;
+    background-color: #820a0b;
+    border-radius: 15% 0% 0% 15%;
+    padding: .7rem 2rem .7rem 6.5vmin;
+    width: 35%;
+    display: flex;
+    align-items: center;
 }
 
 .avaliation_text {
-    align-items: center;
-    margin: auto 3.5rem;
-    font-weight: 300;
+  display: flex;
+  flex-direction: column;
 }
 
-.person_img {
+.avaliation_img .person_img {
     border-radius: 50%;
-    height: 13vh;
-    position: absolute;
-    left: 1px;
-    margin-left: 40px;
-    margin-top: -16px;
+    height: 14.5vmin;
+    z-index: 1;
+    position: relative;
 }
 
 @media screen and (max-width: 700px) {
