--- a/css/style.css
+++ b/css/style.css
@@ -56,7 +56,7 @@ p::selection {
 p {
   font-family: 'Quicksand', sans-serif;
   color: #fff;
-  font-size: 2.4vh !important;
+  font-size: 1.1rem !important;
   font-weight: 400;
   text-align: left;
 }
@@ -220,6 +220,37 @@ h3 {
   font-weight: 800;
   margin-top: 5rem !important;
   letter-spacing: 2px;
+}
+/** Carousel **/
+.berlim-captions {
+  right: 10% !important;
+  left: 10% !important;
+}
+
+.berlim-infos {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.info {
+  display: flex;
+  align-items: center;
+  column-gap: 1rem;
+}
+
+.info-body p {
+  text-align: center;
+  font-size: unset !important;
+  margin-bottom: 0rem;
+}
+
+.info > i {
+  color: #bb0a1e;
+  font-size: 2rem;
+}
+.info-body > h6 {
+  color: #bb0a1e;
 }
 
 /** ajustes de espaçamento do container principal **/
