--- a/css/style.css
+++ b/css/style.css
@@ -329,6 +329,17 @@ h3 {
   justify-content: center;
 }
 
+.image a {
+  text-decoration: none;
+  display: flex;
+  justify-content: center;
+}
+
+.image p {
+  margin-top: 5vh;
+  font-size: 1rem;
+}
+
 .image:hover {
   opacity: 1;
 }
