--- a/css/tourist_spot.css
+++ b/css/tourist_spot.css
@@ -99,7 +99,7 @@ body {
   color: white;
 }
 
-@media screen and (max-width: 1000px) {
+/* @media screen and (max-width: 1000px) {
   .menu ul {
     display: none !important;
   }
@@ -112,7 +112,6 @@ body {
 
 @media screen and (max-width: 1000px) {
 
-  /* .menu.responsive {position: relative;} */
   .menu.responsive .icon {
     position: absolute;
     right: 0;
@@ -124,7 +123,7 @@ body {
     display: block !important;
     text-align: left;
   }
-}
+} */
 
 .menu {
   display: flex;
