--- a/css/style.css
+++ b/css/style.css
@@ -124,6 +124,7 @@ body,
   color: white;
 }
 
+
 @media screen and (max-width: 1000px) {
   .menu ul {
     display: none !important;
@@ -133,9 +134,20 @@ body,
     float: right;
     display: block;
   }
-}
 
-@media screen and (max-width: 1000px) {
+  .bethImg {
+    margin-bottom: 3rem;
+    margin-left: unset !important;
+  }
+  .presentation {
+    padding: 1rem !important;
+  }
+  .img-carousel,
+  iframe {
+    width: 100%;
+    height: auto;
+  }
+
   /* .menu.responsive {position: relative;} */
   .menu.responsive .icon {
     position: absolute;
@@ -269,7 +281,7 @@ iframe {
   font-weight: 700;
   color: #bb0a1e;
   width: min-content;
-  margin-left: .5rem;
+  margin-left: 0.5rem;
   font-family: 'poppins';
 }
 
@@ -294,7 +306,7 @@ iframe {
 .presentation {
   margin-top: 3rem;
   display: flex;
-  box-sizing: content-box;
+  box-sizing: border-box;
   width: 100%;
   padding: 4rem 0rem 0rem 8rem;
 }
@@ -415,7 +427,7 @@ img {
   width: min-content;
 }
 
-.image a{
+.image a {
   display: flex;
   justify-content: center;
   text-decoration: none;
@@ -423,6 +435,6 @@ img {
 }
 
 .img-thumbnail:hover {
-  filter: grayscale(.6);
+  filter: grayscale(0.6);
   cursor: pointer;
 }
