--- a/css/style.css
+++ b/css/style.css
@@ -206,7 +206,7 @@ body,
 h1 {
   margin: 8rem 0 0rem 0 !important;
   font-family: 'League Spartan', sans-serif;
-  font-size: 7rem !important;
+  font-size: 6.6rem !important;
   font-weight: 900 !important;
   color: #fff;
   line-height: 7rem !important;
@@ -215,11 +215,11 @@ h1 {
 /** subtitulo logo abaixo do título **/
 h2 {
   font-family: 'Quicksand', sans-serif;
-  font-size: 2.4vh !important;
+  font-size: 2.5vh !important;
   color: #fff;
   font-weight: 100;
   letter-spacing: 1px;
-  line-height: 2rem !important;
+  line-height: 1.8rem !important;
 }
 
 /** título do container para começar conteúdo **/
@@ -230,7 +230,7 @@ h3 {
   font-size: 6vh !important;
   text-align: center;
   font-weight: 800;
-  margin-top: 5rem !important;
+  margin-top: 7rem !important;
   letter-spacing: 2px;
 }
 /** Carousel **/
@@ -304,7 +304,7 @@ iframe {
 }
 
 .presentation {
-  margin-top: 3rem;
+  margin-top: 4rem;
   display: flex;
   box-sizing: border-box;
   width: 100%;
@@ -315,7 +315,7 @@ iframe {
   margin-top: 0rem;
   width: 60rem;
   height: auto;
-  margin-left: 3rem;
+  margin-left: 2rem;
 }
 
 @media screen and (max-width: 1700px) {
@@ -379,7 +379,7 @@ iframe {
   display: flex;
   position: fixed;
   height: 6.5vh;
-  margin: auto 5%;
+  margin: auto 7%;
   z-index: 999;
 }
 
@@ -416,12 +416,13 @@ img {
   /* display: none; */
   font-family: 'League Spartan', sans-serif;
   position: absolute;
-  top: 36vh;
+  top: 38vh;
   align-self: center;
   color: #fff;
   text-shadow: 2px 2px 2px #000;
   font-size: 1.7rem !important;
-  letter-spacing: 1px;
+  letter-spacing: 2px;
+  line-height: 3.5vh;
   font-weight: 900;
   text-align: center;
   width: min-content;
@@ -435,6 +436,6 @@ img {
 }
 
 .img-thumbnail:hover {
-  filter: grayscale(0.6);
+  filter: grayscale(0.7);
   cursor: pointer;
 }
