--- a/css/tourist_spot.css
+++ b/css/tourist_spot.css
@@ -1,6 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Quicksand:wght@300;400;500&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=League+Spartan&family=Poppins:wght@300;400&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Teko:wght@500&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Hubballi&family=Oswald&display=swap');
 
 /** personalização da barra de rolagem **/
 ::-webkit-scrollbar {
@@ -45,6 +46,11 @@
   background: transparent;
 }
 
+p::selection {
+  color: #fff;
+  background-color: #000000;
+}
+
 * {
   box-sizing: border-box;
   padding: 0;
@@ -57,7 +63,8 @@ p, a {
 }
 
 /** corpo do site e seu fundo **/
-body {
+body,
+::selection {
   padding-top: 10vh;
   margin: 0;
   background-color: #000;
@@ -167,26 +174,28 @@ body {
 
 .container {
   margin: 30px auto 30px auto;
-  backdrop-filter: blur(9px);
-  background-color: rgba(0, 0, 0, 0.50);
-  width: 73vw;
+  backdrop-filter: blur(4px);
+  background-color: rgba(0, 0, 0, 0.253);
+  width: 72vw;
   border-radius: 20px;
+  margin-top: 3vh;
 }
 
 .container h1 {
-  font-family: 'teko';
-  font-weight: 500;
+  font-family: 'Oswald', sans-serif;
+  font-weight: 900;
   text-transform: uppercase;
   text-align: center;
   color: #fff;
-  font-size: 4rem;
-  text-shadow: 2px 2px #aaa, 3px 3px #666, 3px 3px #333;
-  padding-top: 25px;
+  font-size: 3rem;
+  margin-bottom: 3vh;
+  text-shadow: 2px 0 0px #800040, 3px 2px 0px rgba(77, 0, 38, 0.5), 3px 0 3px #FF002B, 4px 0 3px #800015, 4px 2px 3px rgba(77, 0, 13, 0.5), 2px 2px 2px rgba(206, 89, 55, 0);
+  padding-top: 20px;
 }
 
 .banner_img {
   position: fixed;
-width: 34vh;
+  width: 34vh;
   z-index: 100;
   right: 0pt;
   float: right;
@@ -196,6 +205,7 @@ width: 34vh;
 .images {
   height: 30vh;
   font-size: 0;
+  float: center;
 }
 
 img {
@@ -208,12 +218,12 @@ img:hover {
 
 .spot_images {
   height: 30vh;
-  width: 33%;
+  width: 33.3%;
   object-fit: cover;
 }
 
 .info {
-  padding: 1.6vw 6vw 0 6vw;
+  padding: 1vw 3vw 0 3vw;
   display: flex;
   flex-direction: row;
   flex-wrap: wrap;
@@ -237,7 +247,7 @@ h3 {
 }
 
 .section_spacing {
-  width: 7%;
+  width: 6%;
 }
 
 .mapa {
@@ -301,16 +311,17 @@ h3 {
   position: relative;
 }
 
-@media screen and (max-width: 700px) {
+@media screen and (max-width: 800px) {
   .half_section {
     width: 100%;
-}
+  }
 
-.section_spacing {
+  .section_spacing {
     width: 0%;
+  }
+
+  .info {
+    display: flex;
+    flex-direction: column;
+  }
 }
-.info {
-  display: flex;
-  flex-direction: column;
-}
-} 
